receiver/build/log/idf_py_stdout_output_10384
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/hiep/Hiep/tft/build/bootloader/esp-idf/esptool_py && /home/hiep/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/hiep/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/hiep/Hiep/tft/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/espnow_recv/espnow_recv.c.obj
In file included from /home/hiep/esp-idf/components/esp_wifi/include/esp_now.h:11,
                 from /home/hiep/Hiep/tft/main/espnow_recv/espnow_recv.c:2:
/home/hiep/Hiep/tft/main/espnow_recv/espnow_recv.c: In function 'espnow_init':
/home/hiep/Hiep/tft/main/espnow_recv/espnow_recv.c:102:46: warning: passing argument 1 of 'esp_now_register_recv_cb' from incompatible pointer type [-Wincompatible-pointer-types]
  102 |     ESP_ERROR_CHECK(esp_now_register_recv_cb(recv_cb));
      |                                              ^~~~~~~
      |                                              |
      |                                              void (*)(const uint8_t *, const uint8_t *, int) {aka void (*)(const unsigned char *, const unsigned char *, int)}
/home/hiep/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/hiep/esp-idf/components/esp_wifi/include/esp_now.h:158:54: note: expected 'esp_now_recv_cb_t' {aka 'void (*)(const struct esp_now_recv_info *, const unsigned char *, int)'} but argument is of type 'void (*)(const uint8_t *, const uint8_t *, int)' {aka 'void (*)(const unsigned char *, const unsigned char *, int)'}
  158 | esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/hiep/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/hiep/Hiep/tft/build/config -I/home/hiep/Hiep/tft/main -I/home/hiep/Hiep/tft/main/web -I/home/hiep/Hiep/tft/main/servo -I/home/hiep/Hiep/tft/main/wifi -I/home/hiep/Hiep/tft/main/motor -I/home/hiep/Hiep/tft/main/tft -I/home/hiep/Hiep/tft/main/espnow_recv -I/home/hiep/esp-idf/components/newlib/platform_include -I/home/hiep/esp-idf/components/freertos/config/include -I/home/hiep/esp-idf/components/freertos/config/include/freertos -I/home/hiep/esp-idf/components/freertos/config/xtensa/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/hiep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/hiep/esp-idf/components/freertos/esp_additions/include -I/home/hiep/esp-idf/components/esp_hw_support/include -I/home/hiep/esp-idf/components/esp_hw_support/include/soc -I/home/hiep/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/hiep/esp-idf/components/esp_hw_support/dma/include -I/home/hiep/esp-idf/components/esp_hw_support/ldo/include -I/home/hiep/esp-idf/components/esp_hw_support/port/esp32/. -I/home/hiep/esp-idf/components/esp_hw_support/port/esp32/include -I/home/hiep/esp-idf/components/heap/include -I/home/hiep/esp-idf/components/log/include -I/home/hiep/esp-idf/components/soc/include -I/home/hiep/esp-idf/components/soc/esp32 -I/home/hiep/esp-idf/components/soc/esp32/include -I/home/hiep/esp-idf/components/hal/platform_port/include -I/home/hiep/esp-idf/components/hal/esp32/include -I/home/hiep/esp-idf/components/hal/include -I/home/hiep/esp-idf/components/esp_rom/include -I/home/hiep/esp-idf/components/esp_rom/include/esp32 -I/home/hiep/esp-idf/components/esp_rom/esp32 -I/home/hiep/esp-idf/components/esp_common/include -I/home/hiep/esp-idf/components/esp_system/include -I/home/hiep/esp-idf/components/esp_system/port/soc -I/home/hiep/esp-idf/components/esp_system/port/include/private -I/home/hiep/esp-idf/components/xtensa/esp32/include -I/home/hiep/esp-idf/components/xtensa/include -I/home/hiep/esp-idf/components/xtensa/deprecated_include -I/home/hiep/esp-idf/components/lwip/include -I/home/hiep/esp-idf/components/lwip/include/apps -I/home/hiep/esp-idf/components/lwip/include/apps/sntp -I/home/hiep/esp-idf/components/lwip/lwip/src/include -I/home/hiep/esp-idf/components/lwip/port/include -I/home/hiep/esp-idf/components/lwip/port/freertos/include -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/hiep/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/hiep/esp-idf/components/esp_lcd/include -I/home/hiep/esp-idf/components/esp_lcd/interface -I/home/hiep/esp-idf/components/driver/deprecated -I/home/hiep/esp-idf/components/driver/i2c/include -I/home/hiep/esp-idf/components/driver/touch_sensor/include -I/home/hiep/esp-idf/components/driver/twai/include -I/home/hiep/esp-idf/components/driver/touch_sensor/esp32/include -I/home/hiep/esp-idf/components/esp_pm/include -I/home/hiep/esp-idf/components/esp_ringbuf/include -I/home/hiep/esp-idf/components/esp_driver_gpio/include -I/home/hiep/esp-idf/components/esp_driver_pcnt/include -I/home/hiep/esp-idf/components/esp_driver_gptimer/include -I/home/hiep/esp-idf/components/esp_driver_spi/include -I/home/hiep/esp-idf/components/esp_driver_mcpwm/include -I/home/hiep/esp-idf/components/esp_driver_ana_cmpr/include -I/home/hiep/esp-idf/components/esp_driver_i2s/include -I/home/hiep/esp-idf/components/esp_driver_sdmmc/include -I/home/hiep/esp-idf/components/sdmmc/include -I/home/hiep/esp-idf/components/esp_driver_sdspi/include -I/home/hiep/esp-idf/components/esp_driver_sdio/include -I/home/hiep/esp-idf/components/esp_driver_dac/include -I/home/hiep/esp-idf/components/esp_driver_rmt/include -I/home/hiep/esp-idf/components/esp_driver_tsens/include -I/home/hiep/esp-idf/components/esp_driver_sdm/include -I/home/hiep/esp-idf/components/esp_driver_i2c/include -I/home/hiep/esp-idf/components/esp_driver_uart/include -I/home/hiep/esp-idf/components/vfs/include -I/home/hiep/esp-idf/components/esp_driver_ledc/include -I/home/hiep/esp-idf/components/esp_driver_parlio/include -I/home/hiep/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/hiep/esp-idf/components/esp_wifi/include -I/home/hiep/esp-idf/components/esp_wifi/wifi_apps/include -I/home/hiep/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/hiep/esp-idf/components/esp_wifi/include/local -I/home/hiep/esp-idf/components/esp_event/include -I/home/hiep/esp-idf/components/esp_phy/include -I/home/hiep/esp-idf/components/esp_phy/esp32/include -I/home/hiep/esp-idf/components/esp_netif/include -I/home/hiep/esp-idf/components/nvs_flash/include -I/home/hiep/esp-idf/components/spi_flash/include -I/home/hiep/esp-idf/components/esp_partition/include -I/home/hiep/esp-idf/components/esp_http_server/include -I/home/hiep/esp-idf/components/http_parser -I/home/hiep/Hiep/tft/managed_components/lvgl__lvgl -I/home/hiep/Hiep/tft/managed_components/lvgl__lvgl/src -I/home/hiep/Hiep/tft/managed_components -I/home/hiep/Hiep/tft/managed_components/lvgl__lvgl/examples -I/home/hiep/Hiep/tft/managed_components/lvgl__lvgl/demos -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/hiep/Hiep/tft=. -fmacro-prefix-map=/home/hiep/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/hiep/Hiep/tft/main/main.c
/home/hiep/Hiep/tft/main/main.c: In function 'app_main':
/home/hiep/Hiep/tft/main/main.c:58:13: error: implicit declaration of function 'check_sensor_levels' [-Werror=implicit-function-declaration]
   58 |             check_sensor_levels();  // ✅ xử lý cảnh báo ở nền
      |             ^~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[5/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
